# Resume-to-Job-Description-Matcher

./: .gitignore  README.md  app.py  pyproject.toml
src/job_matching_crew/: crew.py  main.py  temp_uploaded_cv.md
src/job_matching_crew/config/: agents.yaml  tasks.yaml
src/job_matching_crew/data/inputs/: dummy_cv.md
src/job_matching_crew/data/outputs/: cv_report.md  job_report.md  match_report.md
