[project]
name = "job_matching_crew"
version = "0.1.0"
description = "Job-matching-Crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
job_matching_crew = "job_matching_crew.main:run"
run_crew = "job_matching_crew.main:run"
train = "job_matching_crew.main:train"
replay = "job_matching_crew.main:replay"
test = "job_matching_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
